feat: authenticate user
