# backend/cmd/api/routes.go
@@ -1,8 +1,10 @@
 package main
 
 import (
+	_ "backend/docs"
 	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/chi/v5/middleware"
+	httpSwagger "github.com/swaggo/http-swagger"
 	"net/http"
 )
 
@@ -11,7 +13,16 @@ func (app *App) Routes() http.Handler {
 	mux.Use(middleware.Recoverer)
 	mux.Use(app.enableCORS)
 
+	mux.Post("/authenticate", app.Authenticate)
+	mux.Post("/register", nil)
+	mux.Get("/refresh", nil)
+	mux.Get("/logout", nil)
+
 	mux.Get("/", app.Home)
+
+	mux.Get("/swagger/*", httpSwagger.Handler(
+		httpSwagger.URL("http://localhost:"+app.Port+"/swagger/doc.json"),
+	))
 
 	return mux
 }
